--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -44,6 +44,7 @@
 
     .header-main {
         background-color: transparent;
+        position: absolute;
         padding-top: 2.5em;
         padding-left: 1.5em;
         padding-right: 1.5em;
@@ -59,6 +60,8 @@
 
     .hamburger {
         display: inline;
+        position: fixed;
+        right: 1.5em;
     }
 
 }
